RND-536 add fix ie11 flex wrap

--- a/profiles/cr/themes/custom/campaign_base/sass/components/teaser-block/_teaser-block.scss
+++ b/profiles/cr/themes/custom/campaign_base/sass/components/teaser-block/_teaser-block.scss
@@ -78,12 +78,19 @@
   }
 }
 .teaser-block__body {
-  @include flex-wrap(wrap);
   @include align-content(center);
   @include justify-content(center);
   @include align-items(center);
   @include display-flex;
   @include flex-direction(column);
+  * { // fix ie11 bug flex not wrapping
+    width: 100%;
+  }
+  .teaser-block__cta {
+    .btn {
+      width: auto;
+    }
+  }
   @include breakpoint($screen-md, $no-query: true) {
     .block-content--view-mode-cw-s &,
     .block-content--view-mode-cw-m & {
